Added User objects

--- a/config-local.yml
+++ b/config-local.yml
@@ -1,3 +1,12 @@
+# Server settings.
+server:
+  applicationConnectors:
+  - type: http
+    port: 9000
+  adminConnectors:
+  - type: http
+    port: 9001
+
 # Database settings.
 database:
 
