Switched to using HttpClient for posting to Email provider

--- a/pom.xml
+++ b/pom.xml
@@ -100,9 +100,9 @@
             <version>1.4.182</version>
         </dependency>
         <dependency>
-            <groupId>com.sun.jersey</groupId>
-            <artifactId>jersey-client</artifactId>
-            <version>1.18.1</version>
+            <groupId>commons-httpclient</groupId>
+            <artifactId>commons-httpclient</artifactId>
+            <version>3.1</version>
         </dependency>
 
     </dependencies>
