--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,13 @@
             <artifactId>h2</artifactId>
             <version>1.4.182</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>9.3-1100-jdbc41</version>
+        </dependency>
+
         <dependency>
             <groupId>commons-httpclient</groupId>
             <artifactId>commons-httpclient</artifactId>
