--- a/pom.xml
+++ b/pom.xml
@@ -124,6 +124,12 @@
             <version>3.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20140107</version>
+        </dependency>
+
     </dependencies>
 
 </project>
