--- a/pom.xml
+++ b/pom.xml
@@ -130,6 +130,12 @@
             <version>20140107</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.flickr4java</groupId>
+            <artifactId>flickr4java</artifactId>
+            <version>2.12</version>
+        </dependency>
+
     </dependencies>
 
 </project>
