--- a/pom.xml
+++ b/pom.xml
@@ -136,6 +136,12 @@
             <version>2.12</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.glassfish.jersey.media</groupId>
+            <artifactId>jersey-media-multipart</artifactId>
+            <version>2.15</version>
+        </dependency>
+
     </dependencies>
 
 </project>
