--- a/config-live.yml
+++ b/config-live.yml
@@ -1,19 +1,36 @@
 # Server settings.
-# HEROKU NOTE - the port gets be overridden with the Heroku $PORT in the Procfile
 server:
-  type: simple
-  applicationContextPath: /
-  connector:
-    type: http
-    port: 8080
+  applicationConnectors:
+  - type: http
+    port: 9000
+  adminConnectors:
+  - type: http
+    port: 9001
+
+# Asset settings.
+assets:
+  overrides:
+    /assets: src/main/resources/assets/
+    /assets/users/images: /tmp
 
 # Database settings.
-# HEROKU NOTE - none of these are used since the values come from the Heroku $DATABASE_URL
 database:
-  driverClass: org.postgresql.Driver
-  user: unused-user
-  password: unused-pw
-  url: unused-url
+
+  properties:
+    hibernate.dialect: org.hibernate.dialect.MySQLDialect
+
+  # the name of your JDBC driver
+  driverClass: com.mysql.jdbc.Driver 
+
+  # the username
+  user: root
+
+  # the password
+  password: 
+
+  # the JDBC URL
+  url: jdbc:mysql://80.189.37.215/runbud
+
   validationQuery: SHOW TABLES
 
 # Logging settings.
@@ -21,6 +38,14 @@ logging:
 
   # The default level of all loggers. Can be OFF, ERROR, WARN, INFO, DEBUG, TRACE, or ALL.
   level: INFO
+
+  # Logger-specific levels.
+  loggers:
+
+    # Sets the level for 'com.example.app' to DEBUG.
+    com.thomshutt.runbud: DEBUG
+
+    org.hibernate.SQL: ALL
 
   appenders:
     - type: console
